@@ -842,3 +842,9 @@ v0.77.1.5:
 	- Active players now checks if a player is online, rather than only their last logged on time.
 	- Towny backup now correctly shuts down the loggers before backing up (no more corrupt/locked files).
 	- Towny now correctly removes economy accounts upon deletion of the resident/town/nation, instead of setting it to zero.
+	- Added auto modes for chat.
+	  Type '/tc' to set town chat mode. All text typed from then on will be sent to town chat.
+	  While in a chat mode you can still talk in other channels by using the channel commands eg. '/nc hi'.
+	  While in a chat mode you can talk in global chat with '/g text here'.
+	  to clear all chat modes '/g'.
+	- Added a new permission node for global chat ('/g') of 'towny.chat.global'.
